turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:35: error: identifier expected but ')' found.
    right(360/7.)
                ^